# algebra

./: Cargo.toml  LICENSE
src/: continued_functions.rs  field.rs  integers.rs  intmod.rs  lib.rs  multivariate.rs  multivariatepoly.rs  poly.rs  polymod.rs  univariate.rs
src/multivariate/: multiindex.rs  multivariatepoly.rs  terms.rs
src/univariate/: poly.rs  polymod.rs
