
[package]
name = "algebra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = {version = "0.4.4",features = ["rand"]}
rustc-serialize = "0.3.24"
proc-macro-crate = "3.0.0"
num-traits = "0.2.17"
rand = "0.8.5"
itertools = "0.12.1"
termion = "3.0.0"
